# vigilops

./: .env.example  .gitignore  CHANGELOG.md  README.md  README.md.bak  README.zh-CN.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  qa-patrol.md  run_migration.py  task-board.md
agent/: agent.example.yaml  pyproject.toml
agent/scripts/: install-windows-agent.ps1  install-windows-service.ps1
agent/tests/test_db_collectors/: test_base.py  test_mysql.py  test_oracle.py  test_postgres.py  test_redis.py  test_schema.py
agent/vigilops_agent/: __init__.py  cli.py  collector.py  config.py  db_collector.py  db_schema.py  discovery.py  reporter.py
agent/vigilops_agent/db_collectors/: __init__.py  base.py  mysql.py  oracle.py  postgres.py  redis.py
backend/: .env.example  Dockerfile  requirements.txt
deploy/: docker-compose.prod.yml  docker-compose.quickstart.yml
docs/: MCP_INTEGRATION.md  POST_COMPLETION_ROADMAP.md  agent-guide.md  backend-audit-2026-03-14.md  changelog.md  community-post-prometheus-bridge.md  roadmap-v1.0.md  test-report-offline-deploy.md  user-guide.md  windows-agent-install.md
frontend/: index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
reports/: ai-memory-upgrade-2026-03-02.md  article-juejin-01-2026-03-02.md  article-juejin-02-2026-03-02.md  article-review-all-2026-03-02.md  article-v2ex-01-2026-03-02.md  dashboard-style-review-2026-03-02.md  dhh-dashboard-fix-2026-03-02.md  feature-review-2026-03-02.md  full-review-round2-2026-03-02.md  marketing-strategy-2026-03-02.md  tech-review-2026-03-02.md
scripts/: deploy-ecs.sh  install-agent-centos7.sh  install-agent.sh  (+3 more)
(+267 files in other folders)
